app-ecs/terraform/alb.tf
#-------------------------------------------------<ALB>-------------------------------------------------
resource "aws_lb" "flask_ecs_alb" {
  name               = "flask-ecs-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]
  subnets            = var.public_subnet_ids

  enable_deletion_protection = false
}

#-----------------------------------------------<TARGET GROUP>-----------------------------------------------
resource "aws_lb_target_group" "flask_alb_tg" {
  name        = "flask-alb-tg"
  port        = 8001
  protocol    = "HTTP"
  target_type = "ip"
  vpc_id      = var.vpc_id
}

#-------------------------------------------------<LISTENER>--------------------------------------------------
resource "aws_lb_listener" "flask_alb_listener" {
  load_balancer_arn = aws_lb.flask_ecs_alb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.flask_alb_tg.arn
  }
}
